<?xml version="1.0" encoding="utf-8"?>
<com.aarfaatechnovision.kjl.shivanshbhajibazar.comman.SlidingLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_15sdp"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/_5sdp"
    app:cardElevation="0dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_15sdp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_2sdp">


        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:id="@+id/menu_cvProfile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_5sdp"
                android:gravity="center"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <com.aarfaatechnovision.kjl.shivanshbhajibazar.customecomponent.CustomTextView
                        style="@style/ganaral_header_style"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/change_password"
                        app:font_name="NunitoBold.ttf" />


                    <ImageView
                        android:id="@+id/dailog_change_psw_ivClose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:padding="@dimen/_5sdp"
                        android:src="@drawable/ic_close" />

                </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:orientation="vertical">


                    <com.aarfaatechnovision.kjl.shivanshbhajibazar.customecomponent.CustomTextView
                        style="@style/ganaral_lable_style"
                        android:paddingStart="@dimen/_3sdp"
                        android:text="@string/current_password"
                        app:font_name="NunitoBold.ttf" />


                    <com.aarfaatechnovision.kjl.shivanshbhajibazar.customecomponent.CustomEdittext
                        android:id="@+id/dailog_change_psw_etCurrentPsw"
                        style="@style/ganaral_edittext_style"
                        android:hint="@string/enter_current_password"
                        android:inputType="textPassword"
                        app:font_name="NunitoLight.ttf" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="vertical">


                    <com.aarfaatechnovision.kjl.shivanshbhajibazar.customecomponent.CustomTextView
                        style="@style/ganaral_lable_style"
                        android:paddingStart="@dimen/_3sdp"
                        android:text="@string/new_password"
                        app:font_name="NunitoBold.ttf" />


                    <com.aarfaatechnovision.kjl.shivanshbhajibazar.customecomponent.CustomEdittext
                        android:id="@+id/dailog_change_psw_etNewPsw"
                        style="@style/ganaral_edittext_style"
                        android:hint="@string/enter_new_password"
                        android:inputType="textPassword"
                        app:font_name="NunitoLight.ttf" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="vertical">


                    <com.aarfaatechnovision.kjl.shivanshbhajibazar.customecomponent.CustomTextView
                        style="@style/ganaral_lable_style"
                        android:paddingStart="@dimen/_3sdp"
                        android:text="@string/confirm_password"
                        app:font_name="NunitoBold.ttf" />


                    <com.aarfaatechnovision.kjl.shivanshbhajibazar.customecomponent.CustomEdittext
                        android:id="@+id/dailog_change_psw_etConfirmPsw"
                        style="@style/ganaral_edittext_style"
                        android:hint="@string/enter_confirm_password"
                        android:inputType="textPassword"
                        app:font_name="NunitoLight.ttf" />


                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp">

                    <com.aarfaatechnovision.kjl.shivanshbhajibazar.customecomponent.CustomTextView
                        android:id="@+id/dailog_change_psw_tvCancel"
                        style="@style/ganaral_btn_save_style"
                        android:layout_toStartOf="@+id/dailog_change_psw_tvSubmit"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/cancel"
                        app:font_name="NunitoSemiBold.ttf" />


                    <com.aarfaatechnovision.kjl.shivanshbhajibazar.customecomponent.CustomTextView
                        android:id="@+id/dailog_change_psw_tvSubmit"
                        style="@style/ganaral_btn_save_style"
                        android:layout_alignParentEnd="true"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/submit"
                        app:font_name="NunitoExtraBold.ttf" />


                </RelativeLayout>


            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>


    </android.support.v7.widget.CardView>
</com.aarfaatechnovision.kjl.shivanshbhajibazar.comman.SlidingLinearLayout>